Refactored Ioc support to use DependencyDeclarations - modeled after metadata work...

--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Data\MetadataHelper.cs" />
     <Compile Include="Data\MetadataValidationException.cs" />
     <Compile Include="DependencyResolver.cs" />
+    <Compile Include="DependencyResolverExtensions.cs" />
     <Compile Include="Diagnostics\ILogger.cs" />
     <Compile Include="Diagnostics\ILoggerContextSerializer.cs" />
     <Compile Include="Diagnostics\LoggerExtensions.cs" />
