--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -92,17 +92,17 @@
     <Compile Include="Collections\Generic\WeakValueDictionary.cs" />
     <Compile Include="Convert.cs" />
     <Compile Include="DataEventArgs.cs" />
-    <Compile Include="Data\IMetadataDeclaration.cs" />
-    <Compile Include="Data\IMetadataRequest.cs" />
-    <Compile Include="Data\IMetadataResolver.cs" />
-    <Compile Include="Data\LazyMetadata.cs" />
-    <Compile Include="Data\MetadataDeclaration.cs" />
-    <Compile Include="Data\MetadataDeclarations\GuidMetadataDeclaration.cs" />
-    <Compile Include="Data\MetadataDeclarations\ComparableMetadataDeclaration.cs" />
-    <Compile Include="Data\MetadataDeclarations\StringMetadataDeclaration.cs" />
-    <Compile Include="Data\MetadataHelper.cs" />
-    <Compile Include="Data\MetadataRequest.cs" />
-    <Compile Include="Data\MetadataValidationException.cs" />
+    <Compile Include="Data\IExodataDeclaration.cs" />
+    <Compile Include="Data\IExodataRequest.cs" />
+    <Compile Include="Data\IExodataResolver.cs" />
+    <Compile Include="Data\LazyExodata.cs" />
+    <Compile Include="Data\ExodataDeclaration.cs" />
+    <Compile Include="Data\ExodataDeclarations\GuidExodataDeclaration.cs" />
+    <Compile Include="Data\ExodataDeclarations\ComparableExodataDeclaration.cs" />
+    <Compile Include="Data\ExodataDeclarations\StringExodataDeclaration.cs" />
+    <Compile Include="Data\ExodataHelper.cs" />
+    <Compile Include="Data\ExodataRequest.cs" />
+    <Compile Include="Data\ExodataValidationException.cs" />
     <Compile Include="DependencyResolver.cs" />
     <Compile Include="DependencyResolverExtensions.cs" />
     <Compile Include="Diagnostics\ILogger.cs" />
