--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -88,14 +88,14 @@
     <Compile Include="ArrayIndexTests.cs" />
     <Compile Include="Collections\Generic\LazyDictionaryTests.cs" />
     <Compile Include="Collections\Generic\SmartLoopTests.cs" />
-    <Compile Include="Data\CommonMetadata.cs" />
+    <Compile Include="Data\CommonExodata.cs" />
     <Compile Include="Data\DescriptionAttribute.cs" />
-    <Compile Include="Data\IntegerMetadata.cs" />
-    <Compile Include="Data\LazyMetadataTests.cs" />
-    <Compile Include="Data\MetadataResolverTests.cs" />
-    <Compile Include="Data\TestMetadataBindingModule.cs" />
+    <Compile Include="Data\IntegerExodata.cs" />
+    <Compile Include="Data\LazyExodataTests.cs" />
+    <Compile Include="Data\ExodataResolverTests.cs" />
+    <Compile Include="Data\TestExodataBindingModule.cs" />
     <Compile Include="Data\TestSubject.cs" />
-    <Compile Include="Data\TestSubjectMetadataSurrogate.cs" />
+    <Compile Include="Data\TestSubjectExodataSurrogate.cs" />
     <Compile Include="Collections\Generic\ProjectionCollectionTests.cs" />
     <Compile Include="ExceptionExtensionsTests.cs" />
     <Compile Include="GuardTests.cs" />
@@ -106,10 +106,10 @@
     <Compile Include="Collections\Generic\WeakValueDictionaryTests.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionaryTests.cs" />
     <Compile Include="DataEventArgsTests.cs" />
-    <Compile Include="Data\StringMetadataAttribute.cs" />
-    <Compile Include="Data\MetadataDeclarationTests.cs" />
-    <Compile Include="Data\StandardMetadataResolverTests.cs" />
-    <Compile Include="Data\StringMetadata.cs" />
+    <Compile Include="Data\StringExodataAttribute.cs" />
+    <Compile Include="Data\ExodataDeclarationTests.cs" />
+    <Compile Include="Data\StandardExodataResolverTests.cs" />
+    <Compile Include="Data\StringExodata.cs" />
     <Compile Include="DependencyResolverTests.cs" />
     <Compile Include="Diagnostics\LoggerExtensionsTests.cs" />
     <Compile Include="ActionExtensionsTests.cs" />
