--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Collections\Generic\SmartLoop.cs" />
     <Compile Include="Collections\Generic\WeakDictionary.cs" />
     <Compile Include="Collections\Generic\WeakKeyDictionary.cs" />
+    <Compile Include="Collections\Generic\WeakKeyMemberDictionary.cs" />
     <Compile Include="Collections\Generic\WeakValueDictionary.cs" />
     <Compile Include="Convert.cs" />
     <Compile Include="DataEventArgs.cs" />
