Refactored MultiMap; added Collection AddRange extension method; added implementations of IReadableQualifier and IReadWriteQualifier...

--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -125,6 +125,8 @@
     <Compile Include="IFluentInterface.cs" />
     <Compile Include="IMaybe.cs" />
     <Compile Include="Maybe.cs" />
+    <Compile Include="ReadableQualifier.cs" />
+    <Compile Include="ReadWriteQualifier.cs" />
     <Compile Include="Reflection\Emit\DynamicMethodExtensions.cs" />
     <Compile Include="Collections\Generic\EnumerableExtensions.cs" />
     <Compile Include="EnumExtensions.cs" />
