--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Collections\Generic\LazySelectionDictionaryTests.cs" />
     <Compile Include="Collections\Generic\MultiMapTests.cs" />
     <Compile Include="Collections\Generic\SmartLoopTests.cs" />
+    <Compile Include="Collections\Generic\WeakDictionaryTestsBase.cs" />
     <Compile Include="Collections\Generic\WeakKeyMemberDictionaryTests.cs" />
     <Compile Include="Data\CommonExodata.cs" />
     <Compile Include="Data\DescriptionAttribute.cs" />
@@ -111,7 +112,7 @@
     <Compile Include="GuardTests.cs" />
     <Compile Include="CastTests.cs" />
     <Compile Include="Collections\Generic\WeakDictionaryTests.cs" />
-    <Compile Include="Collections\Generic\WeakDictionaryTestsBase.cs" />
+    <Compile Include="Collections\Generic\DictionaryTestsBase.cs" />
     <Compile Include="Collections\Generic\WeakKeyDictionaryTests.cs" />
     <Compile Include="Collections\Generic\WeakValueDictionaryTests.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionaryTests.cs" />
