Added support for IExodataScopeObject, ability to remove ExodataBindingSources, and UnsafeCast class...

--- a/Application/iSynaptic.Commons.IL/iSynaptic.Commons.IL.csproj
+++ b/Application/iSynaptic.Commons.IL/iSynaptic.Commons.IL.csproj
@@ -33,12 +33,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Stubs\Cast.cs" />
+    <Compile Include="Stubs\UnsafeCast.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Cast.il" />
+    <None Include="UnsafeCast.il" />
     <None Include="CustomBuildEvents.targets">
       <SubType>Designer</SubType>
     </None>
@@ -46,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ILMergeInternalizationExcludes.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="CustomBuildEvents.targets" />
