--- a/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
+++ b/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
@@ -41,6 +41,7 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AttributeExodataBindingSource.cs" />
+    <Compile Include="IExodataScopeObject.cs" />
     <Compile Include="Syntax\FluentExodataBindingBuilder.cs" />
     <Compile Include="IExodataAttribute.cs" />
     <Compile Include="IExodataBinding.cs" />
