--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -194,7 +194,9 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>FuncExtensions.generated.cs</LastGenOutput>
     </None>
-    <None Include="iSynaptic.Commons.nuspec" />
+    <None Include="iSynaptic.Commons.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
