NUnit now defaults to running under .NET 4.0...

--- a/External/Tools/NUnit/nunit-agent-x86.exe.config
+++ b/External/Tools/NUnit/nunit-agent-x86.exe.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+  <startup>
+    <requiredRuntime version="v4.0.30319" />
+  </startup>
+
   <runtime>
     <!-- We need this so test exceptions don't crash NUnit -->
     <legacyUnhandledExceptionPolicy enabled="1" />
