--- a/External/Tools/NUnit/nunit-console-x86.exe.config
+++ b/External/Tools/NUnit/nunit-console-x86.exe.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <startup>
+    <requiredRuntime version="v4.0.30319" />
+  </startup>
 
   <runtime>
     <!-- We need this so test exceptions don't crash NUnit -->
