--- a/External/Tools/NUnit/nunit-x86.exe.config
+++ b/External/Tools/NUnit/nunit-x86.exe.config
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <startup>
+    <requiredRuntime version="v4.0.30319" />
+  </startup>
+
   <!--
      Application settings for NUnit-gui.exe. Do NOT put settings
 	 for use by your tests here.
