--- a/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
+++ b/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
@@ -40,6 +40,12 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AttributeExodataBindingSource.cs" />
+    <Compile Include="ExodataDeclarations\ComparableExodataDeclaration.cs" />
+    <Compile Include="ExodataDeclarations\GuidExodataDeclaration.cs" />
+    <Compile Include="ExodataDeclarations\StringExodataDeclaration.cs" />
+    <Compile Include="ExodataRequest.cs" />
+    <Compile Include="ExodataValidationException.cs" />
+    <Compile Include="IExodataRequest.cs" />
     <Compile Include="IExodataScopeObject.cs" />
     <Compile Include="Syntax\FluentExodataBindingBuilder.cs" />
     <Compile Include="IExodataAttribute.cs" />
