Exodata: Moved binding details into a seperate interface...

--- a/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
+++ b/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ExodataDeclarations\StringExodataDeclaration.cs" />
     <Compile Include="ExodataRequest.cs" />
     <Compile Include="ExodataValidationException.cs" />
+    <Compile Include="IExodataBindingDetails.cs" />
     <Compile Include="IExodataRequest.cs" />
     <Compile Include="IExodataScopeObject.cs" />
     <Compile Include="Syntax\FluentExodataBindingBuilder.cs" />
