Exodata: Bindings can now carry a name; ambiguous Exodata resolution yields a custom exception that provides the offending Exodata bindings...

--- a/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
+++ b/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
@@ -39,6 +39,7 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AmbiguousExodataBindingsException.cs" />
     <Compile Include="AttributeExodataBindingSource.cs" />
     <Compile Include="ComparableExodataDeclaration.cs" />
     <Compile Include="GuidExodataDeclaration.cs" />
